--- a/sass/style.sass
+++ b/sass/style.sass
@@ -63,7 +63,7 @@ footer
 	background: #ED6985
 	padding: 10px
 #gallery
-	background: #fff
+	background: #ba55d3
 .open 
 	position: fixed
 	top: 5%
@@ -207,7 +207,7 @@ iframe
 		font-family: $font
 
 .displayImg
-	background: blue
+	background: #663399
 	margin-right: 5px
 	height: 80vh
 	overflow: scroll
