--- a/templates/vencanice.html
+++ b/templates/vencanice.html
@@ -1,29 +1,29 @@
 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-	<a href="img/vencanice/img01.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img01.jpg" class=" img-thumbnail" alt="Tailors Secrets"></a>
+	<a href="img/vencanice/img01.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img01.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
 <div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
-	<a href="img/vencanice/img02.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img02.jpg" class=" img-thumbnail" alt="Tailors Secrets"></a>
+	<a href="img/vencanice/img02.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img02.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
 <div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
-	<a href="img/vencanice/img03.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img03.jpg" class=" img-thumbnail"  alt="Tailors Secrets"></a>
+	<a href="img/vencanice/img03.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img03.jpg" class=" img-thumbnail img-responsive"  alt="Tailors Secrets"></a>
 </div> 
 <div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
-	<a href="img/vencanice/img04.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img04.jpg" class=" img-thumbnail" alt="Tailors Secrets"></a>
+	<a href="img/vencanice/img04.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img04.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div> 
 <div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
-	<a href="img/vencanice/img05.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img05.jpg" class=" img-thumbnail" alt="Tailors Secrets"></a>
+	<a href="img/vencanice/img05.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img05.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
 <div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
-	<a href="img/vencanice/img06.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img06.jpg" class=" img-thumbnail" alt="Tailors Secrets"></a>
+	<a href="img/vencanice/img06.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img06.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
 <div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
-	<a href="img/vencanice/img07.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img07.jpg" class=" img-thumbnail" alt="Tailors Secrets"></a>
+	<a href="img/vencanice/img07.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img07.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
 <div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
-	<a href="img/vencanice/img08.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img08.jpg" class=" img-thumbnail" alt="Tailors Secrets"></a>
+	<a href="img/vencanice/img08.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img08.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
 <div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
-	<a href="img/vencanice/img09.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img09.jpg" class=" img-thumbnail" alt="Tailors Secrets"></a>
+	<a href="img/vencanice/img09.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/vencanice/img09.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
 								
 							
