--- a/sass/style.sass
+++ b/sass/style.sass
@@ -139,8 +139,8 @@ footer
 	-webkit-transition-delay: 0.25s 
 
 .sub-menu li a 
-	color: #000
-	font-family: 'Kalam', Arial, Helvetica, sans-serif
+	color: #b35353
+	font-family: $font , Arial, Helvetica, sans-serif
 	font-size: 25px
 	width: 100%
 	display: block
