--- a/css/style.css
+++ b/css/style.css
@@ -144,8 +144,8 @@ footer {
   -webkit-transition-delay: 0.25s; }
 
 .sub-menu li a {
-  color: #000;
-  font-family: "Kalam", Arial, Helvetica, sans-serif;
+  color: #b35353;
+  font-family: "Lobster", cursive, Arial, Helvetica, sans-serif;
   font-size: 25px;
   width: 100%;
   display: block;
