--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,7 +5,7 @@ section
 	width: 100vw
 	height: 100vh
 footer
-	background: red
+	background: #fff
 #first
 	background: url(../img/home-background.jpg) center no-repeat
 	background-size: cover
@@ -60,6 +60,9 @@ footer
 			transform: perspective(900px) rotateY(0deg)
 
 #contact
+	background: -webkit-linear-gradient(#ED6985, #fff) 
+	background: -o-linear-gradient(#ED6985, #fff) 
+	background: linear-gradient(#ED6985, #fff) 
 	background: #ED6985
 	padding: 10px
 #gallery
@@ -217,3 +220,6 @@ iframe
 		margin: 10px
 		width: 200px
 		height: 200px
+	h1
+		font-size: 30px
+		color: #fff
