--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,6 +15,9 @@ footer
 	color: #B35353
 	h1 
 		text-decoration: underline
+		font-family: $font
+	h2 
+		font-family: $font
 
 	
 #about 
@@ -68,6 +71,11 @@ footer
 	padding: 10px
 #gallery
 	background: #ba55d3
+	h1
+		font-size: 30px
+		font-family: $font
+		color: #fff
+		padding-top: 5px
 .open 
 	position: fixed
 	top: 5%
