--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ iframe {
     font-family: "Lobster", cursive; }
 
 .displayImg {
-  background: #663399;
+  background: #ba55d3;
   margin-right: 5px;
   height: 80vh;
   overflow: scroll; }
