--- a/sass/style.sass
+++ b/sass/style.sass
@@ -219,7 +219,7 @@ iframe
 		font-family: $font
 
 .displayImg
-	background: #663399
+	background: #ba55d3
 	margin-right: 5px
 	height: 80vh
 	overflow: scroll
