--- a/sass/style.sass
+++ b/sass/style.sass
@@ -64,6 +64,9 @@ footer
 			transform: perspective(900px) rotateY(0deg)
 
 #contact
+	h1
+		font-family: $font
+		font-size: 30px
 	background: -webkit-linear-gradient(#ED6985, #fff) 
 	background: -o-linear-gradient(#ED6985, #fff) 
 	background: linear-gradient(#ED6985, #fff) 
@@ -71,11 +74,13 @@ footer
 	padding: 10px
 #gallery
 	background: #ba55d3
+	overflow: scroll
 	h1
 		font-size: 30px
 		font-family: $font
 		color: #fff
 		padding-top: 5px
+
 .open 
 	position: fixed
 	top: 5%
@@ -222,7 +227,7 @@ iframe
 	background: #ba55d3
 	margin-right: 5px
 	height: 80vh
-	overflow: scroll
+	
 
 #display
 	img
