--- a/templates/haljine.html
+++ b/templates/haljine.html
@@ -1,45 +1,45 @@
-<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4 col-sm-3 col-md-3 col-lg-3">
 	<a href="img/haljine/img01.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img01.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img02.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img02.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img03.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img03.jpg" class=" img-thumbnail img-responsive"  alt="Tailors Secrets"></a>
 </div> 
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img04.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img04.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div> 
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img05.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img05.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img06.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img06.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img07.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img07.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img08.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img08.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img09.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img09.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img10.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img10.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img11.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img11.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img12.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img12.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img13.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img13.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img14.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img14.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
-<div class="col-xs-3 col-xs-3 col-md-3 col-lg-3">
+<div class="col-xs-4 col-sm-4  col-md-3 col-lg-3">
 	<a href="img/haljine/img15.jpg" data-lightbox="gallery" data-title="Napredak 037"><img src="img/haljine/img15.jpg" class=" img-thumbnail img-responsive" alt="Tailors Secrets"></a>
 </div>
