--- a/partials/_mobile.sass
+++ b/partials/_mobile.sass
@@ -14,9 +14,9 @@
 			p
 				line-height: 1
 	.address
-		margin-top: 20px
+		margin-top: 0
 		span
-			font-size: 12px
+			font-size: 10px
 		p
 			font-size: 10px
 	#about 
