--- a/partials/_mobile.sass
+++ b/partials/_mobile.sass
@@ -13,12 +13,14 @@
 				height: 80px
 			p
 				line-height: 1
-	.address
-		margin-top: 0
-		span
-			font-size: 10px
-		p
-			font-size: 10px
+				font-size: 12px
+	#contact
+		.address
+			margin-top: 0
+			span
+				font-size: 14px
+			p
+				font-size: 14px
 	#about 
 		background: pink
 		.spanAlign 
