--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,6 @@
   body p {
     font-size: 10px; }
 
-  #about .spanAlign .logo {
-    width: 80px;
-    height: 80px; }
-  #about .spanAlign p {
-    line-height: 1;
-    font-size: 12px; }
-
   #contact .address {
     margin-top: 0; }
     #contact .address span {
@@ -27,32 +20,13 @@
       vertical-align: middle;
       text-align: center;
       height: 50vh; }
-      #about .spanAlign .box {
-        width: 200px;
-        height: 202px;
-        margin: auto;
-        position: relative; }
-      #about .spanAlign .logo {
-        left: 0;
-        top: 0;
-        width: 200px;
-        height: 202px;
-        position: absolute;
-        transition: transform 1s linear;
-        backface-visibility: hidden; }
-      #about .spanAlign .back {
-        left: 0;
-        top: 0;
-        width: 200px;
-        height: 202px;
-        position: absolute;
-        transform: perspective(900px) rotateY(180deg);
-        backface-visibility: hidden;
-        transition: transform 1s linear; }
-      #about .spanAlign .box:hover > .logo {
-        transform: perspective(900px) rotateY(180deg); }
-      #about .spanAlign .box:hover > .back {
-        transform: perspective(900px) rotateY(0deg); } }
+      #about .spanAlign h1 {
+        margin-top: 10px;
+        font-size: 20px; }
+      #about .spanAlign p {
+        line-height: 1.5;
+        float: left;
+        font-size: 12px !important; } }
 #main {
   padding: 0; }
 
