--- a/partials/_mobile.sass
+++ b/partials/_mobile.sass
@@ -5,22 +5,14 @@
 		h2
 			font-size: 12px
 		p
-			font-size: 10px
-	#about
-		.spanAlign
-			.logo
-				width: 80px
-				height: 80px
-			p
-				line-height: 1
-				font-size: 12px
+			font-size: 10px 
 	#contact
 		.address
 			margin-top: 0
 			span
 				font-size: 14px
 			p
-				font-size: 14px
+				font-size: 14px 
 	#about 
 		background: pink
 		.spanAlign 
@@ -28,30 +20,11 @@
 			vertical-align: middle
 			text-align: center
 			height: 50vh
-			.box
-				width: 200px
-				height: 202px
-				margin: auto
-				position: relative
-			.logo 
-				left: 0
-				top: 0
-				width: 200px
-				height: 202px
-				position: absolute
-				transition: transform 1s linear
-				backface-visibility: hidden
-			.back 
-				left: 0
-				top: 0
-				width: 200px
-				height: 202px
-				position: absolute
-				transform: perspective(900px) rotateY(180deg)
-				backface-visibility: hidden
-				transition: transform 1s linear
-			.box:hover > .logo 
-				transform: perspective(900px) rotateY(180deg)
-			.box:hover > .back 
-				transform: perspective(900px) rotateY(0deg)
+			h1
+				margin-top: 10px
+				font-size: 20px
+			p
+				line-height: 1.5
+				float: left
+				font-size: 12px !important
 
