--- a/partials/_mobile.sass
+++ b/partials/_mobile.sass
@@ -26,5 +26,13 @@
 			p
 				line-height: 1.5
 				float: left
-				font-size: 12px !important
+				font-size: 10px !important
+		.box
+			width: 200px !important
+			height: 200px !important
+			img
+				width: 200px !important
+				height: 202px !important
+
+@media only screen and (max-width: 500px)
 
