--- a/partials/_mobile.sass
+++ b/partials/_mobile.sass
@@ -34,4 +34,40 @@
 				width: 200px !important
 				height: 202px !important
 
+@media only screen and (max-width: 800px)
+	body
+		h1
+			font-size: 18px
+		h2
+			font-size: 16px
+		p
+			font-size: 14px 
+	#contact
+		.address
+			margin-top: 0
+			span
+				font-size: 16px
+			p
+				font-size: 16px 
+	#about 
+		background: pink
+		.spanAlign 
+			display: table-cell
+			vertical-align: middle
+			text-align: center
+			height: 50vh
+			h1
+				margin-top: 10px
+				font-size: 20px
+			p
+				line-height: 1.5
+				float: left
+				font-size: 10px !important
+		.box
+			width: 200px !important
+			height: 200px !important
+			img
+				width: 200px !important
+				height: 202px !important
+
 
