--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,7 +8,7 @@ section
 footer
 	background: #fff
 #first
-	background: url(../img/home-background.jpg) center no-repeat
+	background: url(../img/home-background.jpg) center no-repeat fixed
 	background-size: cover
 	padding: 20%
 	font-size: 40px
