--- a/sass/style.sass
+++ b/sass/style.sass
@@ -56,13 +56,13 @@ footer
 			width: 300px
 			height: 302px
 			position: absolute
-			transform: perspective(900px) rotateY(180deg)
+			transform: rotateY(180deg)
 			backface-visibility: hidden
 			transition: transform 1s linear
 		.box:hover > .logo 
-			transform: perspective(900px) rotateY(180deg)
+			transform: rotateY(180deg)
 		.box:hover > .back 
-			transform: perspective(900px) rotateY(0deg)
+			transform: rotateY(0deg)
 
 #contact
 	h1
